apps/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"    
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "argocd.tequila.megakuul.ch"

  rules:
    - matches:
        - path: 
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
